alignment issues with creatures

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,6 +46,10 @@ div.field_with_errors {
 .form-group span {
 	width: 80px !important;
 }
+
+.form-group input {
+	width: 100px !important;
+}
 #mgw span {
 	width: 60px !important;
 }
